chore: Run errorprone for JDK 17+ only (#2023)
* chore: Run errorprone for JDK 17+

* chore: Enable error prone for Java 17+

* chore: Set the error prone core version as a property

* chore: Add error prone configs in handwritten modules

* chore: generate libraries at Thu Dec 18 19:31:48 UTC 2025

---------

Co-authored-by: cloud-java-bot <cloud-java-bot@google.com>